data/derived/comb/progs/unify/prog5389.ml.out
Characters 71-73:
  | (h1, h2) -> if h2 then wwhile (f,h1) else h1;;
                                     ^^
Error: This expression has type 'a but an expression was expected of type
         'a * bool
       The type variable 'a occurs inside 'a * bool
